--- a/references.bib
+++ b/references.bib
@@ -72,7 +72,13 @@
   publisher={Springer}
 }
 
- @Manual{palmerpenguins,    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},    year = {2020},    note = {R package version 0.1.0},    doi = {10.5281/zenodo.3960218},    url = {https://allisonhorst.github.io/palmerpenguins/},  }
+@Manual{palmerpenguins,    
+    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
+    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},    
+    year = {2020},    
+    note = {R package version 0.1.0},    
+    doi = {10.5281/zenodo.3960218},    
+    url = {https://allisonhorst.github.io/palmerpenguins/}}
 
 @MISC{penguinsimage,
     author = {{Andrew Shiva}},
