--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -25,17 +25,33 @@ By the end of the chapter, students will be able to:
 
 ## Clustering
 Clustering is a data analysis task involving separating a data set into
-subgroups of related data. For example, we might use clustering to separate a data set of documents into groups that correspond to topics, a data set of human
-genetic information into groups that correspond to ancestral subpopulations, or
-a data set of online customers into groups that correspond to purchasing
-behaviours.  Once the data are separated, we can, for example, use the subgroups
-to generate new questions about the data and follow up with a predictive
-modelling exercise. In this course, clustering will be used only for exploratory
-analysis, i.e., uncovering patterns in the data.
-Note that clustering is a fundamentally different kind of task than
-classification or regression. Most notably, both classification and regression are *supervised tasks* where there is a *predictive target* (a class label or value), and we have examples of past data with labels/values that help us predict those of future data. By contrast, clustering is an *unsupervised task*, as we are trying to understand and examine the structure of data without any labels to help us. This approach has both advantages and disadvantages. Clustering requires no additional annotation or input on the data. For example, it would be nearly impossible to annotate all the articles on Wikipedia with human-made topic labels. However, we can still cluster the articles without this information to find groupings corresponding to topics automatically. 
+subgroups of related data. For example, we might use clustering to separate a
+data set of documents into groups that correspond to topics, a data set of
+human genetic information into groups that correspond to ancestral
+subpopulations, or a data set of online customers into groups that correspond
+to purchasing behaviours.  Once the data are separated, we can, for example,
+use the subgroups to generate new questions about the data and follow up with a
+predictive modelling exercise. In this course, clustering will be used only for
+exploratory analysis, i.e., uncovering patterns in the data.  
 
-However, because there is no predictive target, it is not as easy to evaluate the "quality" of a clustering.  With classification, we can use a test data set to assess prediction performance. In clustering, there is not a single good choice for evaluation. In this book, we will use visualization to ascertain the quality of a clustering, and leave rigorous evaluation for more advanced courses.  
+Note that clustering is a fundamentally different kind of task than classification or
+regression. In particular, both classification and regression are *supervised
+tasks* where there is a *predictive target* (a class label or value), and we
+have examples of past data with labels/values that help us predict those of
+future data. By contrast, clustering is an *unsupervised task*, as we are
+trying to understand and examine the structure of data without any labels to
+help us. This approach has both advantages and disadvantages. Clustering
+requires no additional annotation or input on the data. For example, it would
+be nearly impossible to annotate all the articles on Wikipedia with human-made
+topic labels. However, we can still cluster the articles without this
+information to find groupings corresponding to topics automatically. 
+
+However, because there is no predictive target, it is not as easy to evaluate
+the "quality" of a clustering.  With classification, we can use a test data set
+to assess prediction performance. In clustering, there is not a single good
+choice for evaluation. In this book, we will use visualization to ascertain the
+quality of a clustering, and leave rigorous evaluation for more advanced
+courses.  
 
 > There are also so-called *semisupervised* tasks, where only some of the data
 > come with labels/annotations, but the vast majority don't. The goal
@@ -77,7 +93,11 @@ base <- ggplot(data, aes(x = flipper_length_scaled, y = bill_length_scaled)) +
 base
 ```
 
-Based on the visualization in figure \@ref(fig:10-toy-example-plot), we might suspect there are a few subtypes of penguins, selected from combinations of high/low flipper length and high/low bill length. How do we find this grouping automatically, and how do we pick the number of subtypes? The way to rigorously separate the data into groups is to use a clustering algorithm.
+Based on the visualization in figure \@ref(fig:10-toy-example-plot), we might
+suspect there are a few subtypes of penguins, selected from combinations of
+high/low flipper length and high/low bill length. How do we find this grouping
+automatically, and how do we pick the number of subtypes? The way to rigorously
+separate the data into groups is to use a clustering algorithm.
 In this chapter, we will focus on the *K-means* algorithm, a widely-used
 and often very effective clustering method, combined with the *elbow method* for
 selecting the number of clusters. This procedure will separate the data into 
@@ -101,7 +121,11 @@ the plot:
 - small flipper length and large bill length (<font color="#00BA38">green cluster</font>).
 - and large flipper length and large bill  length (<font color="#619CFF">blue cluster</font>).
 
-Once we have made these determinations, we can use them to inform our species classifications or ask further questions about our data. For example, we might be interested in understanding the relationship between flipper length and bill length, and that relationship may differ depending on the type of penguin we have. 
+Once we have made these determinations, we can use them to inform our species
+classifications or ask further questions about our data. For example, we might
+be interested in understanding the relationship between flipper length and bill
+length, and that relationship may differ depending on the type of penguin we
+have. 
 
 ## K-means 
 
