polished intro of peng data

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -64,8 +64,16 @@ courses.
 **An illustrative example** 
 
 
-Here we will present an illustrative example using a data set from the [{palmerpenguins} R data package](https://allisonhorst.github.io/palmerpenguins/). This data set was collected by [Dr. Kristen Gorman](https://www.uaf.edu/cfos/people/faculty/detail/kristen-gorman.php) and the [Palmer Station, Antarctica LTER](https://lternet.edu/) and includes measurements for adult penguins near Palmer Station
-[@palmerpenguins]. We have modified the data set for use in this chapter. Here we will focus on two variables measuring penguin bill length (in mm) and flipper length (mm), and we want to learn whether there are distinct types of penguins in our data. Understanding this might help us with species classification in a data-driven way.
+Here we will present an illustrative example using a data set from the
+[{palmerpenguins} R data package](https://allisonhorst.github.io/palmerpenguins/). This data set was
+collected by [Dr. Kristen Gorman](https://www.uaf.edu/cfos/people/faculty/detail/kristen-gorman.php) and
+the [Palmer Station, Antarctica LTER](https://lternet.edu/) and includes
+measurements for adult penguins near Palmer Station [@palmerpenguins]. We have
+modified the data set for use in this chapter. Here we will focus on using two
+variables---penguin bill and flipper length, both in mm---to determine whether 
+there are distinct types of penguins in our data.
+Understanding this might help us with species discovery and classification in a data-driven
+way.
 ```{r 09-penguins, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Gentoo penguin. [@penguinsimage]", fig.retina = 2}
 knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg")
 ```
