--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -101,7 +101,7 @@ base <- ggplot(data, aes(x = flipper_length_scaled, y = bill_length_scaled)) +
 base
 ```
 
-Based on the visualization in figure \@ref(fig:10-toy-example-plot), we might
+Based on the visualization in Figure \@ref(fig:10-toy-example-plot), we might
 suspect there are a few subtypes of penguins, selected from combinations of
 high/low flipper length and high/low bill length. How do we find this grouping
 automatically, and how do we pick the number of subtypes? The way to rigorously
@@ -166,7 +166,8 @@ Then we would compute the $x$ and $y$ variables, $\mu_x$ and $\mu_y$, of the clu
 $$\mu_x = \frac{1}{4}(x_1+x_2+x_3+x_4) \quad \mu_y = \frac{1}{4}(y_1+y_2+y_3+y_4).$$
 
 In the first cluster from the example, there are `r nrow(clus1)` data points. These are shown with their cluster center 
-(``r paste("flipper_length_scaled =", round(mean(clus1$flipper_length_scaled),2))`` and ``r paste("bill_length_scaled =", round(mean(clus1$bill_length_scaled),2))``) highlighted in figure \@ref(fig:10-toy-example-clus1-center).
+(``r paste("flipper_length_scaled =", round(mean(clus1$flipper_length_scaled),2))`` and ``r paste("bill_length_scaled =", round(mean(clus1$bill_length_scaled),2))``) highlighted 
+in Figure \@ref(fig:10-toy-example-clus1-center).
 
 ```{r 10-toy-example-clus1-center, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Cluster 1 from the toy example, with center highlighted."}
 base <- ggplot(clus1) +
@@ -191,7 +192,7 @@ In the `r nrow(clus1)`-observation cluster example above, we would compute the W
 
 $$S^2 = \left((x_1 - \mu_x)^2 + (y_1 - \mu_y)^2\right) + \left((x_2 - \mu_x)^2 + (y_2 - \mu_y)^2\right) +\left((x_3 - \mu_x)^2 + (y_3 - \mu_y)^2\right) \left((x_4 - \mu_x)^2 + (y_4 - \mu_y)^2\right).$$
 
-These distances are denoted by lines in figure \@ref(fig:10-toy-example-clus1-dists) for the first cluster of the penguin data example. 
+These distances are denoted by lines in Figure \@ref(fig:10-toy-example-clus1-dists) for the first cluster of the penguin data example. 
 
 ```{r 10-toy-example-clus1-dists, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Cluster 1 from the toy example, with distances to the center highlighted."}
 base <- ggplot(clus1) +
