--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -56,15 +56,15 @@ In the above question, we are interested in making a conclusion about *all*
 undergraduate students in North America; this is our **population**.
 In general, the population is the complete collection of individuals or cases we are interested in studying. 
 Further, in the above question, we are interested in computing a quantity&mdash;the proportion
-of iPhone owners&mdash;based on the entire population. This is our **population parameter**.
+of iPhone owners&mdash;based on the entire population. This proportion is our **population parameter**.
 In general, a population parameter is a numerical characteristic
 of the entire population. To compute this number in the example above, we would need to ask 
-every single undergraduate in North America whether or not they own an iPhone. In practice,
+every single undergraduate in North America whether they own an iPhone. In practice,
 directly computing population parameters is often time-consuming and costly, and sometimes impossible. 
 
 A more practical approach would be to collect measurements for a **sample**: a subset of
 individuals collected from the population. We can then compute a **sample estimate**&mdash;a numerical
-characteristic of the sample&mdash;that estimates the population parameter. For example, suppose we randomly selected 100 undergraduate students across North America (the sample) and computed the proportion of those
+characteristic of the sample&mdash;that estimates the population parameter. For example, suppose we randomly selected 10 undergraduate students across North America (the sample) and computed the proportion of those
 students who own an iPhone (the sample estimate). In that case, we might suspect that that proportion is a reasonable estimate of the proportion of students who own an iPhone in the entire population. 
 
 ```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample", fig.retina = 2}
@@ -85,7 +85,7 @@ The population consists of all studio apartment rentals in Vancouver, and the po
 ## Sampling distributions
 
 ### Sampling distributions for proportions
-Airbnb is an online marketplace for arranging places to stay. We will look at an example using data from [Inside Airbnb](http://insideAirbnb.com/). The data set, `airbnb`, contains  listings for Vancouver, Canada, in September 2020. Our data contains an ID number, neighbourhood, type of room, the number of people the rental accommodates, number of bathrooms, bedrooms, beds, and the price per night. 
+We will look at an example using data from [Inside Airbnb](http://insideAirbnb.com/). Airbnb is an online marketplace for arranging places to stay. The data set, `airbnb`, contains listings for Vancouver, Canada, in September 2020. Our data includes an ID number, neighbourhood, type of room, the number of people the rental accommodates, number of bathrooms, bedrooms, beds, and the price per night. 
 
 ```{r 11-example-means1, echo = FALSE, message = FALSE, warning = FALSE}
 airbnb <- read_csv("data/listings.csv") %>%
@@ -94,15 +94,18 @@ airbnb <- read_csv("data/listings.csv") %>%
   na.omit()
 airbnb <- airbnb %>%
   mutate(id = 1:nrow(airbnb))
-head(airbnb)
 ```
+
 ```{r 11-vancouver-city, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Vancouver, BC Canada", fig.retina = 2, out.width="880"}
 knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/7/76/Vancouver_City_2_by_ajithrajeswari.jpg")
 ```
 
-Suppose the city of Vancouver wants to know how many entire homes and apartments are being rented out as short-term rentals on Airbnb (rather than just as private or shared rooms). Therefore they may want to estimate the true proportion of all Airbnb listings where the type of place is listed as entire home or apartment. Now, of course, usually we do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
+```{r}
+airbnb
+```
+Suppose the city of Vancouver wants to know how many Airbnb places are rented out as entire homes and apartments rather than as private or shared rooms. Therefore they may want to estimate the true proportion of all Airbnb listings where the "type of place" is listed as "entire home or apartment." Of course, we usually do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
 
-```{r 11-example-proportions2, echo = TRUE, message = FALSE, warning = FALSE}
+```{r 11-example-proportions2, echo = TRUE, message = FALSE, warning = FALSE }
 library(tidyverse)
 library(infer)
 
@@ -121,21 +124,22 @@ population_proportion <- airbnb %>%
   ) %>% 
   pull()
 ```
-From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,2)`. This value, `r round(population_proportion,2)`, is the *population parameter*. Remember this parameter value is usually unknown in real data analysis problems.
 
-What would happen if we were to randomly-select 40 listings and count the number of entire home/apartment listings (*i.e.,* take a random sample of size 40 from our population)? Let's use R to simulate this using our `airbnb` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
+From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,2)`. This value, `r round(population_proportion,2)`, is the *population parameter*. Remember, this parameter value is usually unknown in real data analysis problems.
+
+What would happen if we were to randomly select 40 listings and count the number of entire home/apartment listings (*i.e.,* take a random sample of size 40 from our population)? Let's use R to simulate this using our `airbnb` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
 
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
-set.seed(1)
-samples_1 <- rep_sample_n(tbl = airbnb, size = 40)
-airbnb_sample_1 <- summarize(samples_1,
+set.seed(123)
+sample_1 <- rep_sample_n(tbl = airbnb, size = 40)
+airbnb_sample_1 <- summarize(sample_1,
   n = sum(room_type == "Entire home/apt"),
   prop = sum(room_type == "Entire home/apt") / 40
 )
 airbnb_sample_1
 ```
 Here we see that the proportion of entire home/apartment listings in this random sample is
-`r round(airbnb_sample_1$prop,2)`. This value is our estimate &mdash; our best guess of our population parameter using this sample. Given that it is a single
+`r round(airbnb_sample_1$prop,2)`. This value is our *estimate* &mdash; our best guess of our population parameter using this sample. Given that it is a single
 value that we are estimating, we often refer to it as a **point estimate**.
 
 Now imagine we took another random sample of 40 listings from the population. Do you
@@ -143,9 +147,9 @@ think we would get the same proportion? Let's try sampling from the population
 again and see what happens. 
 
 ```{r 11-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
-set.seed(123)
-samples_2 <- rep_sample_n(airbnb, size = 40)
-airbnb_sample_2 <- summarize(samples_2,
+set.seed(1234)
+sample_2 <- rep_sample_n(airbnb, size = 40)
+airbnb_sample_2 <- summarize(sample_2,
   n = sum(room_type == "Entire home/apt"),
   prop = sum(room_type == "Entire home/apt") / 40
 )
@@ -159,8 +163,8 @@ different result. Estimates vary from sample to sample
 due to **sampling variability**. 
 
 But just how much should we expect the estimates of our random
-samples to vary? In order to understand this, we will simulate taking more samples
-of size 40 from our population of listings, and calculate the 
+samples to vary? To understand this, we will simulate taking more samples
+of size 40 from our population of listings and calculate the 
 proportion of entire home/apartment listings in each sample. We can then
 visualize the distribution of sample proportions we calculate. The distribution
 of the estimate for all possible samples of a given size (which we commonly refer to as $n$) from a population is
@@ -176,7 +180,7 @@ samples
 tail(samples)
 ```
 
-Notice the column `replicate` is indicating the replicate, or sample, with which each
+Notice the column `replicate` indicates the replicate, or sample, with which each
 listing belongs. Since we took 20,000 samples of size 40, there are 20,000 replicates.
 Now that we have taken 20,000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of entire home/apartment listings for each sample, $\hat{p}_\text{entire home/apartment}$:
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
@@ -194,7 +198,7 @@ sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
 sampling_distribution
 ```
 
-The sampling distribution appears to be bell-shaped with one peak. It is
+The sampling distribution in figure \@ref(fig:11-example-proportions7) appears to be bell-shaped with one peak. It is
 centered around `r round(mean(sample_estimates$sample_proportion),1)` and the
 sample proportions range from about `r round(min(sample_estimates$sample_proportion), 1)` to 
 about `r round(max(sample_estimates$sample_proportion), 1)`. In fact, we can calculate
@@ -206,7 +210,7 @@ sample_estimates %>%
 ```
 We notice that the sample proportions are centred around the population proportion value, `r round(mean(sample_estimates$sample_proportion), 2)`! In general, the mean of the distribution of $\hat{p}$ should be equal to $p$, which is good because that means the sample proportion is neither an overestimate nor an underestimate of the population proportion.
 
-So what can we learn from this sampling distribution? This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is 0.63. In practice, we usually don't know the proportion of our population, but if we can use what we know about the sampling distribution, we can use it to make inferences about our population when we only have a single sample. 
+So what can we learn from this sampling distribution? This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is `r round(population_proportion,2)`. In practice, we usually don't know the proportion of our population, but if we can use what we know about the sampling distribution, we can use it to make inferences about our population when we only have a single sample. 
 
 <!--- > **Note:** If random samples of size $n$ are taken from a population, $\hat{p}$ will be approximately Normal with mean $p$ and standard deviation $\sqrt{\frac{p(1-p)}{n}}$ as long as the sample size $n$ is large enough such that $np$ and $n(1 - p)$ are at least 10, where $p$ is the population proportion, $\hat{p}$ is the sample proportion and $n$ is the sample size. 
 --->
@@ -214,7 +218,7 @@ So what can we learn from this sampling distribution? This distribution tells us
 ### Sampling distributions for means 
 
 In the previous section, our variable of interest&mdash; `room_type` &mdash;was
-*categorical*, and the population parameter of interest was the proportion of listings where the room type was "entire home/apt". As mentioned in the introduction to this chapter, there are many choices of population parameter for each type of observed variable. What if we wanted to infer something about a population of *quantitative* variables instead? For instance, a traveller visiting Vancouver, BC may wish to know about the prices of staying somewhere using Airbnb. Particularly, they might be interested in estimating the population mean price per night of Airbnb listings in Vancouver, BC. This section will study the case where we are interested in the population mean of a quantitative variable.
+*categorical*, and the population parameter of interest was the proportion of listings where the room type was "entire home/apt". As mentioned in the introduction to this chapter, there are many choices of the population parameter for each type of observed variable. What if we wanted to infer something about a population of *quantitative* variables instead? For instance, a traveller visiting Vancouver, BC, may wish to know about the prices of staying somewhere using Airbnb. Particularly, they might be interested in estimating the population mean price per night of Airbnb listings in Vancouver, BC. This section will study the case where we are interested in the population mean of a quantitative variable.
 
 We can visualize the population distribution of the price per night with a histogram. 
 ```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada", out.width = "60%"}
@@ -223,7 +227,7 @@ population_distribution <- ggplot(airbnb, aes(x = price)) +
   xlab("Price per night ($)")
 population_distribution
 ```
-We see that the distribution has one peak and is skewed&mdash;most of the listings
+From figure \@ref(fig:11-example-means2), we see that the distribution has one peak and is skewed (not symmetric) &mdash;most of the listings
 are less than \$250 per night, but a small proportion of listings cost more
 than that, creating a long tail on the histogram's right side. 
 
@@ -235,16 +239,17 @@ population_parameters
 ```
 The price per night of all Airbnb rentals in Vancouver, BC is \$`r round(population_parameters$pop_mean,2)`, on average. This value is our population parameter since we are calculating it using the population data. 
 
-Suppose that we did not have access to the population data, yet we still wanted to estimate the mean price per night. We could answer this question by taking a random sample of as many Airbnb listings as we had time to, let's say we could do this for 40 listings. What would such a sample look like?
+Suppose we did not have access to the population data (which is usually the case!), yet we wanted to estimate the mean price per night. We could answer this question by taking a random sample of as many Airbnb listings as our time and resources allow. Let's say we could do this for 40 listings. What would such a sample look like?
 
-Let's take advantage of the fact that we do have access to the population data and simulate taking one random sample of 40 listings in R, again using `rep_sample_n`. After doing this we create a histogram to visualize the
-distribution of observations in the sample,
-and calculate the mean of our sample. This number is a **point estimate** for the mean of the full population.
+Let's take advantage of the fact that we do have access to the population data and simulate taking one random sample of 40 listings in R, again using `rep_sample_n`. 
 
-```{r 11-example-means3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", out.width = "60%"}
+```{r 11-example-means3, echo = TRUE, message = FALSE, warning = FALSE}
 one_sample <- airbnb %>%
   rep_sample_n(40)
-one_sample
+```
+
+We can create a histogram to visualize the distribution of observations in the sample (figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean of our sample. This number is a **point estimate** for the mean of the full population.
+```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", out.width = "60%"}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)")
@@ -255,22 +260,24 @@ estimates
 ```
 Recall that the population mean 
 was \$`r round(population_parameters$pop_mean,2)`. We see that our point
-estimate for the mean is \$`r round(estimates$sample_mean, 2)`. So we can see how far our estimate was from the population parameter: the mean was 
+estimate for the mean is \$`r round(estimates$sample_mean, 2)`. So we can see our estimate was fairly close to the population parameter: the mean was 
 about `r round(100*abs(estimates$sample_mean - population_parameters$pop_mean)/population_parameters$pop_mean, 1)`% off.
-Note that in practice, we usually cannot compute the accuracy of the estimate, since we do not have access to the population
-parameter; if we did, we wouldn't need to estimate it!
+Note that we usually cannot compute the estimate's accuracy in practice since we do not have access to the population parameter; if we did, we wouldn't need to estimate it!
 
-Also recall from the previous section that the point estimate can vary; if 
+Also, recall from the previous section that the point estimate can vary; if 
 we took another random sample from the population, then the value of our estimate may change.
 So then did we just get lucky with our point estimate above?
 How much does our estimate vary across different samples of size 40 in this example? Again, since we have access to the population,
 we can take many samples and plot the **sampling distribution** of sample means for samples of size 40 to get a sense
 for this variation. In this case, we'll use 15,000 samples of size 40.
 
-```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40",out.width = "60%"}
+```{r}
 samples <- rep_sample_n(airbnb, size = 40, reps = 15000)
 samples
+```
 
+Now we can calculate the sample mean for each replicate and plot the sampling distribution of sample means for samples of size 40.
+```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40",out.width = "60%"}
 sample_estimates <- samples %>%
   group_by(replicate) %>%
   summarise(sample_mean = mean(price))
@@ -282,7 +289,8 @@ sampling_distribution_40 <- ggplot(sample_estimates, aes(x = sample_mean)) +
 sampling_distribution_40
 ```
 
-Here we see that the sampling distribution of the mean has one peak and is
+
+In figure \@ref(fig:11-example-means4), the sampling distribution of the mean has one peak and is
 bell-shaped. Most of the estimates are between 
 about  \$`r round(quantile(sample_estimates$sample_mean)[2], -1)` and 
 \$`r round(quantile(sample_estimates$sample_mean)[4], -1)`; but there are
@@ -292,7 +300,7 @@ when we estimated the population mean
 with only `r round(100*abs(estimates$sample_mean - population_parameters$pop_mean)/population_parameters$pop_mean, 1)`% error.
 Let's visualize the population
 distribution, distribution of the sample, and the sampling distribution on one 
-plot to compare them.
+plot to compare them in figure \@ref(fig:11-example-means5).
 <!---
 ```{r 11-example-means4.5}
 sample_estimates %>%
@@ -319,8 +327,7 @@ nrow = 3
 Given that there is quite a bit of variation in the sampling distribution of the sample mean&mdash;i.e., 
 the point estimate that we obtain is not very reliable&mdash;is there any way to improve the estimate?
 One way to improve a point estimate is to take a *larger* sample. To illustrate what effect this has,
-we will take many samples of size 20, 50, 100, and 500, and plot the sampling distribution of the sample mean
-below. 
+we will take many samples of size 20, 50, 100, and 500, and plot the sampling distribution of the sample mean.
 
 ```{r 11-example-means6, echo = FALSE, message = FALSE, warning = FALSE}
 ## Sampling n = 20, 50, 100, 500
@@ -417,7 +424,7 @@ grid.arrange(annotated_sampling_dist_20,
 )
 ```
 
-Based on the visualization, two points about the sample mean become clear.
+Based on the visualization in figure \@ref(fig:11-example-means7), two points about the sample mean become clear.
 First, the
 mean of the sample mean (across samples) is equal to the population mean.
 Second, increasing the size of the sample
@@ -453,7 +460,7 @@ and do not have access to the population itself. So how do we get a sense for ho
 variable our point estimate is when we only have one sample to work with?
 In this section, we will discuss **interval estimation** and construct **confidence intervals** using just a single sample from a population. A confidence interval is a range of plausible values for our population parameter. 
 
-Here is the key idea. First, if you take a big enough sample, it *looks like* the population. Notice the histograms' shapes for samples of different sizes taken from the population in the picture below. We see that for a large enough sample, the sample's distribution looks like that of the population.
+Here is the key idea. First, if you take a big enough sample, it *looks like* the population. Notice the histograms' shapes for samples of different sizes taken from the population in figure \@ref(fig:11-example-bootstrapping0). We see that for a large enough sample, the sample's distribution looks like that of the population.
 
 
 ```{r 11-example-bootstrapping0, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of samples of different sizes from the population"}
@@ -531,7 +538,7 @@ For a sample of size $n$, the process we will go through is as follows:
 knitr::include_graphics("img/intro-bootstrap.jpeg")
 ```
 ### Bootstrapping in R 
-Let's continue working with our Airbnb data. Once again,  let's say we are interested in estimating the population mean price per night of all Airbnb listings in Vancouver, Canada using the single sample we collected of size 40. Recall our point estimate, the sample mean, was \$`r round(estimates$sample_mean, 2)` and the distribution is shown in figure \@ref(fig:11-bootstrapping1).
+Let’s continue working with our Airbnb data. Once again, let’s say we are interested in estimating the population mean price per night of all Airbnb listings in Vancouver, Canada, using the single sample we collected of size 40. Recall our point estimate was \$`r round(estimates$sample_mean, 2)`, and the distribution of the sample is displayed in figure \@ref(fig:11-bootstrapping1).
 
 ```{r, echo = F, message = F, warning = F}
 one_sample <- one_sample %>% 
@@ -560,7 +567,6 @@ argument for `replace` from its default value of `FALSE` to `TRUE`.
 ```{r 11-bootstrapping3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Bootstrap distribution", out.width = "60%"}
 boot1 <- one_sample %>%
   rep_sample_n(size = 40, replace = TRUE, reps = 1)
-boot1
 boot1_dist <- ggplot(boot1, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)")
@@ -570,7 +576,7 @@ boot1_dist
 summarise(boot1, mean = mean(price))
 ```
 
-Notice that our bootstrap distribution has a similar shape to the original
+Notice in figure \@ref(fig:11-bootstrapping3) that our bootstrap distribution has a similar shape to the original
 sample distribution. Though the shapes of the distributions are similar, they
 are not identical. You'll also notice that the original sample mean and the
 bootstrap sample mean differ. How might that happen? Remember that we are
@@ -592,7 +598,7 @@ tail(boot15000)
 ```
 
 Let's take a look at histograms of the first six replicates of our bootstrap samples.
-```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, message = FALSE, warning = FALSE}
+```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histograms of first six replicates of bootstrap samples"}
 six_bootstrap_samples <- boot15000 %>%
   filter(replicate <= 6)
 ggplot(six_bootstrap_samples, aes(price)) +
@@ -601,14 +607,14 @@ ggplot(six_bootstrap_samples, aes(price)) +
   facet_wrap(~replicate)
 ```
 
-We see in the graph above how the bootstrap samples differ. We can also calculate the sample mean for each of these six replicates. 
+We see in figure \@ref(fig:11-bootstrapping-six-bootstrap-samples) how the bootstrap samples differ. We can also calculate the sample mean for each of these six replicates. 
 ```{r 11-bootstrapping-six-bootstrap-samples-means, echo = TRUE, message = FALSE, warning = FALSE}
 six_bootstrap_samples %>%
   group_by(replicate) %>%
   summarize(mean = mean(price))
 ```
 
-We can see that the bootstrap sample distributions and the sample means are different. This is because we are sampling with replacement. We will now calculate point estimates for our 15,000 bootstrap samples and generate a bootstrap distribution of our point estimates. The bootstrap distribution suggests how we might expect our point estimate to behave if we took another sample.
+We can see that the bootstrap sample distributions and the sample means are different. They are different because we are sampling *with replacement*. We will now calculate point estimates for our 15,000 bootstrap samples and generate a bootstrap distribution of our point estimates. The bootstrap distribution suggests how we might expect our point estimate to behave if we took another sample.
 
 ```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means"}
 boot15000_means <- boot15000 %>%
@@ -642,14 +648,14 @@ max_height<- max(max_count(sampling_dist), max_count(boot_est_dist))
 sampling_dist <- sampling_dist + 
   annotate("text",
     x = max_x(sampling_dist), max_height, hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))
+    label = paste("mean = ", round(mean(sample_estimates$sample_mean), 2))
   ) +
   geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") 
 
 annotated_boot_est_dist <- boot_est_dist +
   annotate("text",
     x = max_x(boot_est_dist), max_height, hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(boot15000_means$mean), 1))
+    label = paste("mean = ", round(mean(boot15000_means$mean), 2))
   ) +
   geom_vline(xintercept = mean(boot15000_means$mean), col = "red")
 
@@ -659,7 +665,7 @@ grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + 
 )
 ```
 
-There are two essential points that we can take away from these plots. First, the shape and spread of the true sampling distribution and the bootstrap distribution are similar; the bootstrap distribution lets us get a sense of the point estimate's variability. The second important point is that the means of these two distributions are different. The sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap distribution is centred at the original sample's mean price per night, \$`r round(mean(boot15000_means$mean), 2)`. Because we are resampling from the original sample repeatedly, we see that the bootstrap distribution is centred at the original sample's mean value (unlike the sampling distribution of the sample mean, which is centred at the population parameter value). 
+There are two essential points that we can take away from figure \@ref(fig:11-bootstrapping6). First, the shape and spread of the true sampling distribution and the bootstrap distribution are similar; the bootstrap distribution lets us get a sense of the point estimate's variability. The second important point is that the means of these two distributions are different. The sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap distribution is centred at the original sample's mean price per night, \$`r round(mean(boot15000_means$mean), 2)`. Because we are resampling from the original sample repeatedly, we see that the bootstrap distribution is centred at the original sample's mean value (unlike the sampling distribution of the sample mean, which is centred at the population parameter value). Figure \@ref(fig:11-bootstrapping7) summarizes the bootstrapping process.
 
 The idea here is that we can use this distribution of bootstrap sample means to approximate the sampling distribution of the sample means when we only have one sample. Since the bootstrap distribution pretty well approximates the sampling distribution spread, we can use the bootstrap spread to help us develop a plausible range for our population parameter along with our estimate!
 
@@ -817,7 +823,7 @@ bounds <- boot15000_means %>%
 bounds
 ```
 
-Our interval, \$`r round(bounds[1],2) ` to \$`r round(bounds[2],2)`, captures the middle 95\% of the sample mean prices in the bootstrap distribution. We can visualize the interval on our distribution in the picture below. 
+Our interval, \$`r round(bounds[1],2) ` to \$`r round(bounds[2],2)`, captures the middle 95\% of the sample mean prices in the bootstrap distribution. We can visualize the interval on our distribution in figure \@ref(fig:11-bootstrapping9). 
 
 ```{r 11-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with percentile lower and upper bounds", out.width = "70%"}
 boot_est_dist +
