--- a/references.bib
+++ b/references.bib
@@ -73,7 +73,7 @@
 }
 
 @Manual{palmerpenguins,    
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
+    title = {{palmerpenguins}: Palmer Archipelago (Antarctica) penguin data},
     author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},    
     year = {2020},    
     note = {R package version 0.1.0},    
